--- a/index.html
+++ b/index.html
@@ -1,65 +1,74 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Equipe FLL - Bright Builders</title>
-  <link rel="stylesheet" href="Desenvolvimento.css">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Engenheiros do Futuro - Limpeza de Praia</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Quicksand:wght@400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="stylesheet" href="style.css">
 </head>
-<body class="fade-in">
+<body>
   <header class="cabecalho">
-    <h1>Bright Builders 🚀</h1>
-    <p>Transformando ideias em soluções inteligentes! 🧩</p>
+    <h1><i class="fas fa-seedling"></i> Engenheiros do Futuro</h1>
+    <p>Transformando o mundo com inovação e sustentabilidade! 🌱</p>
   </header>
 
-  <section class="sobre">
-    <h2>Nosso Projeto 🛠️</h2>
-    <p>Desenvolvemos uma solução sustentável para reaproveitar água da chuva em escolas usando tecnologia de automação LEGO. 🌱💧</p>
-    <img class="projeto" src="imagens/projeto.webp" alt="Foto do projeto">
+  <section class="sobre fade-in">
+    <h2><i class="fas fa-recycle"></i> Nosso Projeto: Limpeza de Praia 🌊</h2>
+    <p>Nosso projeto visa criar soluções inovadoras para limpar as praias e conscientizar as pessoas sobre a importância de manter o meio ambiente limpo e saudável. Utilizamos LEGO Spike como ferramenta de prototipagem, desenvolvendo soluções tecnológicas com criatividade e trabalho em equipe.</p>
   </section>
 
-  <section class="depoimentos">
-    <h2>Depoimentos da Equipe 🧑‍🤝‍🧑</h2>
+  <section class="depoimentos fade-in">
+    <h2><i class="fas fa-comments"></i> Depoimentos da Equipe 🎤</h2>
     <div class="card">
-      <img src="imagens/mariana.jpg" alt="Mariana Lopes" class="foto-depoente">
-      <div class="texto-depoimento">
-        <p>"Aprendi a importância da colaboração e criatividade!" 💡</p>
-        <span>- Mariana Lopes</span>
-      </div>
+      <img src="website_images/foto3.jpeg" alt="Vitinho do Grau" class="imagem-depoente">
+      <p>"Achamos o projeto muito proativo, criativo e útil. Ele realmente pode ajudar a melhorar a situação das nossas praias!"</p>
+      <span>- Vitinho do Grau (Victor)</span>
     </div>
     <div class="card">
-      <img src="imagens/joao.jpg" alt="João Mendes" class="foto-depoente">
-      <div class="texto-depoimento">
-        <p>"A tecnologia pode mudar o mundo, e começamos aqui." 🌍</p>
-        <span>- João Mendes</span>
-      </div>
+      <img src="website_images/foto2.jpeg" alt="Elis" class="imagem-depoente">
+      <p>"Esse projeto é fundamental para a nossa saúde e o meio ambiente. Limpar as praias vai garantir que todos possam ir para a praia sem a preocupação de pegar virose!"</p>
+      <span>- Elis</span>
     </div>
   </section>
 
-  <section class="galeria">
-    <h2>Galeria da Equipe 📸</h2>
-    <div class="fotos">
-      <img src="imagens/equipe1.webp" alt="Equipe reunida">
-      <img src="imagens/equipe2.webp" alt="Apresentação do projeto">
-    </div>
-  </section>
-
-  <section class="materiais">
-    <h2>Materiais Utilizados 🧱</h2>
+  <section class="materiais fade-in">
+    <h2><i class="fas fa-toolbox"></i> Materiais Utilizados 🧱</h2>
     <ul>
-      <li>Arduino e sensores</li>
-      <li>LEGO Technic</li>
-      <li>Impressão 3D</li>
-      <li>Aplicativo de monitoramento</li>
+      <li>LEGO Spike</li>
+    </ul>
+    <img src="website_images/foto1.jpeg" alt="LEGO Spike sendo utilizado" class="imagem-ilustrativa">
+  </section>
+
+  <section class="informacoes fade-in">
+    <h2><i class="fas fa-leaf"></i> Importância do Projeto 🌍</h2>
+    <p>A poluição das praias é um problema crescente no Brasil e no mundo. Estima-se que mais de 8 milhões de toneladas de plástico acabam nos oceanos a cada ano, afetando a fauna marinha e a saúde das pessoas. Nosso projeto busca combater isso de forma prática e educativa, incentivando a responsabilidade ambiental desde cedo.</p>
+
+    <h2><i class="fas fa-users"></i> Integrantes da Equipe 👩‍🔬👨‍🔧</h2>
+    <ul>
+      <li>Vitinho do Grau (Victor)</li>
+      <li>Elis</li>
+    </ul>
+    <p>Faltaram: Peter e Bernardo</p>
+  </section>
+
+  <section class="ajuda fade-in">
+    <h2><i class="fas fa-hand-holding-heart"></i> Como Você Pode Ajudar? 🤝</h2>
+    <ul>
+      <li><i class="fas fa-check-circle"></i> Recolha seu lixo e incentive amigos a fazer o mesmo</li>
+      <li><i class="fas fa-check-circle"></i> Participe de mutirões de limpeza</li>
+      <li><i class="fas fa-check-circle"></i> Evite plásticos descartáveis</li>
+      <li><i class="fas fa-check-circle"></i> Apoie projetos de educação ambiental</li>
     </ul>
   </section>
 
   <footer class="rodape">
-    <p>© 2025 Bright Builders - FIRST LEGO League</p>
-    <p>Desenvolvido por alunos do 2º ano técnico do Ensino Médio 👩‍💻👨‍💻</p>
-    <p>Trabalho da disciplina de Desenvolvimento Web 🖥️</p>
+    <p>© Engenheiros do Futuro - Limpeza de Praia</p>
+    <p>Desenvolvido na disciplina de Desenvolvimento WEB - Atividade 1 (2° trimestre)</p>
+    <p><i class="fas fa-envelope"></i> Contato: projeto@engenheirosfuturo.com</p>
+    <a href="#" class="botao-lego">Quero Ajudar 🌟</a>
+
   </footer>
 </body>
 </html>
