--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="lego-canto"></div>
+
   <header class="cabecalho">
     <h1><i class="fas fa-seedling"></i> Engenheiros do Futuro</h1>
     <p>Transformando o mundo com inovação e sustentabilidade! 🌱</p>
