--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Engenheiros do Futuro - Limpeza de Praia</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Quicksand:wght@400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="Desenvolvimento.css">
 </head>
 <body>
   <div class="lego-canto"></div>
@@ -24,12 +24,12 @@
   <section class="depoimentos fade-in">
     <h2><i class="fas fa-comments"></i> Depoimentos da Equipe 🎤</h2>
     <div class="card">
-      <img src="website_images/foto3.jpeg" alt="Vitinho do Grau" class="imagem-depoente">
+      <img src="fotos/FOTO1.jpeg" alt="Vitinho do Grau" class="imagem-depoente">
       <p>"Achamos o projeto muito proativo, criativo e útil. Ele realmente pode ajudar a melhorar a situação das nossas praias!"</p>
       <span>- Vitinho do Grau (Victor)</span>
     </div>
     <div class="card">
-      <img src="website_images/foto2.jpeg" alt="Elis" class="imagem-depoente">
+      <img src="fotos/FOTOS2.webp" alt="Elis" class="imagem-depoente">
       <p>"Esse projeto é fundamental para a nossa saúde e o meio ambiente. Limpar as praias vai garantir que todos possam ir para a praia sem a preocupação de pegar virose!"</p>
       <span>- Elis</span>
     </div>
@@ -40,7 +40,7 @@
     <ul>
       <li>LEGO Spike</li>
     </ul>
-    <img src="website_images/foto1.jpeg" alt="LEGO Spike sendo utilizado" class="imagem-ilustrativa">
+    <img src="fotos/FOTOS3.jpeg" alt="LEGO Spike sendo utilizado" class="imagem-ilustrativa">
   </section>
 
   <section class="informacoes fade-in">
