--- a/index.html
+++ b/index.html
@@ -33,12 +33,22 @@
       <p>"Esse projeto é fundamental para a nossa saúde e o meio ambiente. Limpar as praias vai garantir que todos possam ir para a praia sem a preocupação de pegar virose!"</p>
       <span>- Elis</span>
     </div>
+    <div class="card">
+      <img src="fotos/FOTO5.webp" alt="Peter Parker" class="imagem-depoente">
+      <p>"É importante para as pessoas não ficarem doentes e os peixes morrerem. Além de ser importante para conscientizar as pessoas."</p>
+      <span>- Peter Parker</span>
+    </div>
+    <div class="card">
+      <img src="fotos/FOTO4.webp" alt="Bernardo" class="imagem-depoente">
+      <p>"Esse projeto é importante porque ajuda a evitar que as pessoas joguem lixo no mar. Assim, conseguimos manter as praias limpas e protegemos os animais marinhos. Além disso, ele mostra para todos como é fácil fazer a nossa parte pelo planeta."</p>
+      <span>- Bernardo</span>
+    </div>
   </section>
 
   <section class="materiais fade-in">
     <h2><i class="fas fa-toolbox"></i> Materiais Utilizados 🧱</h2>
     <ul>
-      <li>LEGO Spike</li>
+      <li>LEGO Spike - Peçinhas de lego dentro do material</li>
     </ul>
     <img src="fotos/FOTOS3.jpeg" alt="LEGO Spike sendo utilizado" class="imagem-ilustrativa">
   </section>
@@ -51,8 +61,9 @@
     <ul>
       <li>Vitinho do Grau (Victor)</li>
       <li>Elis</li>
+      <li>Peter</li>
+      <li>Bernardo</li>
     </ul>
-    <p>Faltaram: Peter e Bernardo</p>
   </section>
 
   <section class="ajuda fade-in">
@@ -70,7 +81,6 @@
     <p>Desenvolvido na disciplina de Desenvolvimento WEB - Atividade 1 (2° trimestre)</p>
     <p><i class="fas fa-envelope"></i> Contato: projeto@engenheirosfuturo.com</p>
     <a href="#" class="botao-lego">Quero Ajudar 🌟</a>
-
   </footer>
 </body>
 </html>
